--- a/jj.html
+++ b/jj.html
@@ -75,7 +75,6 @@
     <!-- ======= About Section ======= -->
     <section id="about" class="about">
       <div class="container" data-aos="fade-up">
-
         <div class="section-title">
           <h2>Sobre </h2>
           <p>Atualmente estou cursando o Ensino Médio Integrado para Técnico em Informática na Etec Maria Cristina Medeiros. Cursando também idioma inglês a 1 ano , em LS idiomas.</p>
@@ -83,7 +82,7 @@
 
         <div class="row">
           <div class="col-lg-4">
-            <img src="assets/img/profile-img.jpg" class="img-fluid" alt="">
+            
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content">
             <h3>UI/UX Designer &amp; Web Developer.</h3>
@@ -701,7 +700,7 @@
   <footer id="footer">
     <div class="container">
       <h3>Pedro Lucas</h3>
-      <p>Abaixo as redes sociais:</p>
+      <p>Abaixo as redes sociais</p>
       <div class="social-links">
         <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
         <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
