--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
             <img src="assets/img/profile-img.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content">
-            <h3>UI/UX Designer &amp; Web Developer.</h3>
+            <h3>Início dos meus projetos &amp; Desenvolver.</h3>
             <p class="fst-italic">
               Início de 2022 comecei a desenvolver sites para treinar e aperfeiçoar as habilidades , tinha um site que foi feito na escola, e um site extra para treinar e melhorar mais.
             </p>
@@ -133,8 +133,8 @@
           <div class="col-lg-3 col-md-6">
             <div class="count-box">
               <i class="bi bi-emoji-smile"></i>
-              <span data-purecounter-start="0" data-purecounter-end="232" data-purecounter-duration="1" class="purecounter"></span>
-              <p>Happy Clients</p>
+              <span data-purecounter-start="0" data-purecounter-end="0" data-purecounter-duration="1" class="purecounter"></span>
+              <p>Clientes Satisfeitos</p>
             </div>
           </div>
 
@@ -157,7 +157,7 @@
           <div class="col-lg-3 col-md-6 mt-5 mt-lg-0">
             <div class="count-box">
               <i class="bi bi-award"></i>
-              <span data-purecounter-start="0" data-purecounter-end="25" data-purecounter-duration="1" class="purecounter"></span>
+              <span data-purecounter-start="0" data-purecounter-end="0" data-purecounter-duration="1" class="purecounter"></span>
               <p>Prêmios</p>
             </div>
           </div>
@@ -238,26 +238,27 @@
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
-          <h2>Resume</h2>
-          <p>Resumindo, estou cursando informática e pretendo continuar nesta área , é uma profissão muito boa de seguir , existem coisas complexas mas vale a pena.</p>
+          <h2>Resumo</h2>
+          <p>Abaixo verão mais coisas sobre mim, Meu lado emocional , e um pouco do meu início profissional que estou aprimorando</p>
         </div>
 
         <div class="row">
           <div class="col-lg-6">
-            <h3 class="resume-title">Sumary</h3>
+            <h3 class="resume-title">Competências Socioemocionais</h3>
             <div class="resume-item pb-0">
               <h4>Pedro Lucas </h4>
-              <p><em>Há um ano comecei a ler e procurar saber mais sobre informática sobre Tecnologia, lendo livros , procurando vídeos no youtube e coisas mais , e agora e 2022 comecei no curso técnico, estou adorando e aprendendo bastante. </em></p>
+              <p><em>Uma Competência Socioemocional que eu tenho é a Autoconsciência, me conheço bastante e sei quando consigo fazer algo ou não.
+                 </em></p>
               <ul>
-                <li>Ribeirão Pires , SP</li>
-                <li>(123) 456-7891</li>
-                <li>pmlucassouza50015@gmail.com</li>
+                <li>Eu preciso melhorar bastante em tomadas de decisões , tenho muitas dúvidas em certas situações.</li>
+                <li>Sou uma pessoa com empatia, tento muito me colocar no lugar das pessoas para entender situações.</li>
+                <li>Sou Solidário , gosto de estar ajudando as pessoas.</li>
               </ul>
             </div>
 
             <h3 class="resume-title">Education</h3>
             <div class="resume-item">
-              <h4>Master of Fine Arts &amp; Graphic Design</h4>
+              <h4>Estudos &amp; Curso de Inglês</h4>
               <h5>2021- 2022</h5>
               <p><em>LS idiomas , Ribeirão Pires, SP  </em></p>
               <p>Cursando inglês há 1 ano, e atualmente no nível médio.</p>
@@ -305,7 +306,7 @@
 
         <div class="section-title">
           <h2>Portfolio</h2>
-          <p>Adquirindo habilidades naquilo que não consigo desenvolver tão bem , é uma boa forma de treinar</p>
+          <p>Meus projetos desenvolvidos no curso</p>
         </div>
 
         <div class="row">
