--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
         <div class="row">
           <div class="col-lg-4">
-            <img src="../curriculo.bootstrap-main/img2/pedro.jfif" class="img-fluid" alt="">
+            <img src="img2/pedro3.jpg"img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content">
             <h3>Início dos meus projetos &amp; Desenvolver.</h3>
